// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildComparator artifactFilters filters artifact sizes from the totals 1`] = `
Array [
  Object {
    "text": "All",
    "type": "artifact",
  },
  Object {
    "gzip": 45,
    "stat": 123,
    "type": "total",
  },
  Object {
    "gzip": 45,
    "stat": 123,
    "type": "total",
  },
  Object {
    "gzip": 0,
    "gzipPercent": 1,
    "stat": 0,
    "statPercent": 1,
    "type": "totalDelta",
  },
]
`;

exports[`BuildComparator buildDeltas returns an array of deltas 1`] = `
Array [
  Object {
    "artifactDeltas": Array [],
    "deltas": Array [],
    "meta": Object {
      "revision": "1234567",
      "timestamp": 1234567,
    },
  },
  Object {
    "artifactDeltas": Array [
      Object {
        "burritos": Object {
          "gzip": 93,
          "gzipPercent": 1,
          "hashChanged": true,
          "stat": 469,
          "statPercent": 1,
          "type": "delta",
        },
        "churros": Object {
          "gzip": -90,
          "gzipPercent": 1,
          "hashChanged": true,
          "stat": -456,
          "statPercent": 1,
          "type": "delta",
        },
        "tacos": Object {
          "gzip": 0,
          "gzipPercent": 1,
          "hashChanged": false,
          "stat": 0,
          "statPercent": 1,
          "type": "delta",
        },
      },
    ],
    "deltas": Array [
      Object {
        "gzip": 3,
        "gzipPercent": 1.0222222222222221,
        "stat": 13,
        "statPercent": 1.0224525043177892,
        "type": "totalDelta",
      },
    ],
    "meta": Object {
      "revision": "8901234",
      "timestamp": 8901234,
    },
  },
]
`;

exports[`BuildComparator getAscii can filter rows 1`] = `
".----------------------------------------.
|          | 1234567 | 8901234 |   Δ0    |
|----------|---------|---------|---------|
| burritos | 0       | 93      | 93 (1%) |
'----------------------------------------'"
`;

exports[`BuildComparator getAscii does not include filtered artifacts 1`] = `
".------------------------------------.
|       | 1234567 | 8901234 |   Δ0   |
|-------|---------|---------|--------|
| tacos | 45      | 45      | 0 (1%) |
'------------------------------------'"
`;

exports[`BuildComparator getAscii gets an ASCII table 1`] = `
".-----------------------------------------.
|          | 1234567 | 8901234 |    Δ0    |
|----------|---------|---------|----------|
| burritos | 0       | 93      | 93 (1%)  |
| churros  | 90      | 0       | -90 (1%) |
| tacos    | 45      | 45      | 0 (1%)   |
'-----------------------------------------'"
`;

exports[`BuildComparator getCsv can filter rows 1`] = `
",1234567,8901234,Δ0
burritos,0,93,93 (1%)"
`;

exports[`BuildComparator getCsv does not include filtered artifacts 1`] = `
",1234567,8901234,Δ0
tacos,45,45,0 (1%)"
`;

exports[`BuildComparator getCsv gets a CSV formatted table 1`] = `
",1234567,8901234,Δ0
burritos,0,93,93 (1%)
churros,90,0,-90 (1%)
tacos,45,45,0 (1%)"
`;

exports[`BuildComparator getSum gets a row of sums 1`] = `
Array [
  Object {
    "text": "Sum",
    "type": "text",
  },
  Object {
    "gzip": 135,
    "stat": 579,
    "type": "total",
  },
  Object {
    "gzip": 45,
    "stat": 123,
    "type": "total",
  },
  Object {
    "gzip": -90,
    "gzipPercent": 0.3333333333333333,
    "stat": -456,
    "statPercent": 0.21243523316062177,
    "type": "totalDelta",
  },
]
`;

exports[`BuildComparator matrix includes a body of all artifacts 1`] = `
Array [
  Array [
    Object {
      "text": "burritos",
      "type": "artifact",
    },
    Object {
      "gzip": 0,
      "stat": 0,
      "type": "total",
    },
    Object {
      "gzip": 93,
      "stat": 469,
      "type": "total",
    },
    Object {
      "gzip": 93,
      "gzipPercent": 1,
      "hashChanged": true,
      "stat": 469,
      "statPercent": 1,
      "type": "delta",
    },
  ],
  Array [
    Object {
      "text": "churros",
      "type": "artifact",
    },
    Object {
      "gzip": 90,
      "stat": 456,
      "type": "total",
    },
    Object {
      "gzip": 0,
      "stat": 0,
      "type": "total",
    },
    Object {
      "gzip": -90,
      "gzipPercent": 1,
      "hashChanged": true,
      "stat": -456,
      "statPercent": 1,
      "type": "delta",
    },
  ],
  Array [
    Object {
      "text": "tacos",
      "type": "artifact",
    },
    Object {
      "gzip": 45,
      "stat": 123,
      "type": "total",
    },
    Object {
      "gzip": 45,
      "stat": 123,
      "type": "total",
    },
    Object {
      "gzip": 0,
      "gzipPercent": 1,
      "hashChanged": false,
      "stat": 0,
      "statPercent": 1,
      "type": "delta",
    },
  ],
]
`;

exports[`BuildComparator matrix includes a header 1`] = `
Array [
  Object {
    "text": "",
    "type": "text",
  },
  Object {
    "revision": "1234567",
    "type": "revision",
  },
  Object {
    "revision": "8901234",
    "type": "revision",
  },
  Object {
    "againstRevision": "1234567",
    "deltaIndex": 0,
    "revision": "8901234",
    "type": "revisionDelta",
  },
]
`;

exports[`BuildComparator matrix includes a total 1`] = `
Array [
  Object {
    "text": "All",
    "type": "artifact",
  },
  Object {
    "gzip": 135,
    "stat": 579,
    "type": "total",
  },
  Object {
    "gzip": 138,
    "stat": 592,
    "type": "total",
  },
  Object {
    "gzip": 3,
    "gzipPercent": 1.0222222222222221,
    "stat": 13,
    "statPercent": 1.0224525043177892,
    "type": "totalDelta",
  },
]
`;
